@@ -1,3 +1,6 @@
+2013-10-17 tatuya
+* Arrow: Add {source,destination}_{decision,carrier,section}_administration categories
+
 2013-09-08 arnaud.fontaine
 * ZODB Components: Revert 'Allow to execute runUnitTest for bt5 Test Components' to fix tests bootstrap.
 
